# SonicTheHedgehog2Recomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  ISSUES.md  PLAN-divergence-diff.md  README.md  RELEASE.md  _build_native.bat  _build_oracle.bat  _build_release.bat  _smoke.bat  boxart.tga  regen.bat
release/: README.txt
scripts/: launch_netplay_pair.ps1  release-mac.sh
tools/: _2p_hint_fire_count.py  _2p_hint_flag_writes.py  _2p_rdb_summary.py  _palette_check.py  _pause_both.py  _probe_fps.py  _probe_motion_cadence.py  _probe_special_speed.py  _vdp_state.py  build-linux.sh  build-macos.sh  check_dispatch_misses.py  debug_attract_demo_cpz.input  debug_attract_demo_ehz_1p_titlecard.input  debug_special_stage_delayed_jump.input  debug_special_stage_dump.input  debug_special_stage_pre_overflow.input  divergence_diff.py  fuzz_run_right_jump_long.input  fuzz_run_right_long.input  game_state.py  netplay_campaign_guest.input  netplay_campaign_host.input  netplay_versus_guest.input  netplay_versus_host.input  probe_2p_split.input  probe_cpz_scroll.py  probe_hscroll_buf.py  probe_rdb_hscroll.py  probe_swscrl_runs.py  quick_status.py  recomp_ss_churn.py  repro_attract_demo_natural.input  repro_special_stage_from_boot_load.input  repro_special_stage_natural.input  repro_special_stage_state.input  repro_special_stage_tailtramp.input  ring_filter.py  smoke_enter_level_jump.input  smoke_enter_level_run_right.input  (+4 more)
